--- a/requirements.txt
+++ b/requirements.txt
@@ -139,6 +139,7 @@ Routes==2.4.1
 s3transfer==0.3.3
 schema-salad==7.0.20200811075006
 scikit-learn==0.24.0
+sorted-nearest==0.0.32
 seaborn==0.9.0
 Send2Trash==1.5.0
 shellescape==3.4.1
